# docs/swagger.json
@@ -90,7 +90,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/services.NewGroup"
+                            "$ref": "#/definitions/services.GroupView"
                         }
                     }
                 ],
@@ -123,6 +123,63 @@
             }
         },
         "/groups/{id}": {
+            "get": {
+                "description": "Retrieves a group by its ID.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Groups"
+                ],
+                "summary": "Get a group by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Group ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/services.GroupView"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
             "put": {
                 "description": "Updates the details of an existing group.",
                 "consumes": [
@@ -149,7 +206,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/services.NewGroup"
+                            "$ref": "#/definitions/services.GroupView"
                         }
                     }
                 ],
@@ -286,7 +343,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/services.NewParameter"
+                            "$ref": "#/definitions/services.ParameterView"
                         }
                     }
                 ],
@@ -319,6 +376,42 @@
             }
         },
         "/parameters/{id}": {
+            "get": {
+                "description": "Retrieves a parameter by its ID.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Parameters"
+                ],
+                "summary": "Get a parameter by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Parameter ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/services.ParameterView"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
             "put": {
                 "description": "Updates an existing parameter with the provided details.",
                 "consumes": [
@@ -345,7 +438,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/services.NewParameter"
+                            "$ref": "#/definitions/services.ParameterView"
                         }
                     }
                 ],
@@ -533,6 +626,44 @@
                     },
                     "500": {
                         "description": "Internal server error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/services/{id}": {
+            "get": {
+                "description": "Fetches the details of a service by its ID.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Services"
+                ],
+                "summary": "Get a service by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Service ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Service"
+                        }
+                    },
+                    "404": {
+                        "description": "Service not found",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -761,7 +892,7 @@
                 }
             }
         },
-        "services.NewGroup": {
+        "services.GroupView": {
             "type": "object",
             "properties": {
                 "allowed_parameters": {
@@ -784,7 +915,7 @@
                 }
             }
         },
-        "services.NewParameter": {
+        "services.ParameterView": {
             "type": "object",
             "properties": {
                 "allowed_classes": {
